# event-driven-architecture

./: .clang-format  CMakeLists.txt  ClassA.hpp  ClassB.hpp  Fault.cpp  Fault.h  Observer.hpp  Thread.cpp  Thread.hpp  main.cpp  pre-commit-hook
cmake/: clang-cxx-dev-tools.cmake
